# TsunagariC-Testing

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md
b/: arr.c  arr.h  main.c
data/: Makefile
data/areas/: basement.json  basement.tmx  bigtree.json  bigtree.tmx  cave01.json  cave01.tmx  grove01.json  grove01.tmx  grove04.json  grove04.tmx  grove06.json  grove06.tmx  grove_house.json  grove_house.tmx  secret_room.json  secret_room.tmx
data/areas/tiles/: baum.png.json  cave.png.json  forest.png.json  indoors.png.json  indoors_2.png.json  objects.png.json
data/entities/cloud/: cloud.xml
data/entities/clouds/: cloud1.json  cloud1.xml  cloud2.json  cloud2.xml  cloud3.json  cloud3.xml  cloud4.json  cloud4.xml
data/entities/player/: player.json
data/entities/wizard/: wizard.json
src/: CMakeLists.txt  Makefile  clouds.cpp  clouds.h  main.cpp  world.cpp  world.h
src/ai/: CMakeLists.txt  ai-wander.cpp  ai-wander.h
src/areas/: CMakeLists.txt  big-tree.cpp  big-tree.h  bigtree.cpp  cave01.cpp  cave01.h  grove-house.cpp  grove-house.h  grove01.cpp  grove01.h  grove02.cpp  grove04.cpp  grove04.h  grove06.cpp  grove06.h  grove_house.cpp  secret-room.cpp  secret-room.h  secret_room.cpp
src/world/: CMakeLists.txt  clouds.cpp  clouds.h  world.cpp  world.h
